# tiny-cloud-api

./: .gitignore  CHANGELOG.md  Config.example.toml  Config.toml  README.md  example_cfg.toml  pyproject.toml
_data/files/: 404.html
_data/temp/: .gitkeep
src/: cfg.py  main.py
src/controllers/: DbController.py  FileController.py  FolderController.py  FsLayerController.py  UserController.py
src/dependencies/: auth.py  validate_fs_entity_path.py
src/models/: ATokenModel.py  CfgModel.py  FsEntityModel.py  UserModel.py  db.txt
src/models-other/: db.txt  users-fs.txt
src/routers/: download_router.py  fs_router.py  fs_watching_router.py  share_route_router.py  shared_router.py  user_router.py  utils_router.py
src/utils/: FolderToTmpArchive.py  HashingPassword.py  get_simple_hash.py  validate_email.py
